// Generate Proto At ./AuthApp
// protoc -I src/connectAppProto --go_out=plugins=grpc:src/connectAppProto src/connectAppProto/connectApp.proto

syntax = "proto3";

package connectApp;
option go_package = "gos_rpc_proto";

service GameDispatcher {
    rpc DispatchGame(DispatchGameRequest) returns (DispatchGameReply) {}
//    rpc ReportGameInfo(ReportGameRequest) returns (ReportGameReply) {}
}

message DispatchGameRequest {
    string accountId = 1;
    string serverId = 2;
    string sceneId = 3;
}

message DispatchGameReply {
    string gameAppId = 1;
    string gameAppHost = 2;
    string gameAppPort = 3;
    string sceneId = 4;
}

message ReportGameRequest {
    string uuid = 1;
    string host = 2;
    string port = 3;
    int32  ccu  = 4;
}

message ReportGameReply {
    bool success = 1;
}
